<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBG">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:src="@drawable/zodiac_image"
        />
         <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitEnd"
            android:src="@drawable/zodiac_image"
         />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/question_1"
        android:textSize="24dp"
        android:textColor="@color/colorBlack"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/colorWhite"
        />

    <LinearLayout
        android:id="@+id/true_false_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

       <Button
           android:id="@+id/true_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fill_the_blank_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/multiple_choice_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioGroup
            android:id="@+id/mc_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/a_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_button"/>
            <RadioButton
                android:id="@+id/b_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_button" />
            <RadioButton
                android:id="@+id/c_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_button" />
            <RadioButton
                android:id="@+id/d_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_button" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            />
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_button"
            />
        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button"/>
    </LinearLayout>

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="14dp"
        android:fontFamily="serif"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/feedback_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16dp"
        android:text="@string/feedback_1"
        android:textColor="@color/colorBlack"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@color/colorWhite"
        />

</LinearLayout>
</FrameLayout>